# RecPlace-test

./: README.md  alembic.ini  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 8711cc0dbf72_users_and_favorites.py
src/: config.py  database.py  http_client.py  main.py
src/dao/: base.py
src/movies/: dao.py  models.py  router.py  schemas.py
src/user/: auth.py  dao.py  models.py  router.py  schemas.py
