[tool.poetry]
name = "recplace"
version = "0.1.0"
description = ""
authors = ["Danil <gromykodaniel@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
passlib = "^1.7.4"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
python-jose = "^3.3.0"
alembic = "^1.13.3"
pydantic-settings = "^2.6.1"
pydantic = "^2.9.2"
bcrypt = "4.0.1"
aiohttp = "^3.10.10"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[flake8]
max-line-length = 88


[tool.black]
line-length = 88

